@@ -2,15 +2,20 @@
 
 #' Generate noise
 #'
-#' Internal soundgen function.
+#' Generates noise of length \code{len} and with spectrum defined by linear
+#' decay of \code{rolloffNoise} dB/kHz above \code{noiseFlatSpec} Hz OR by a
+#' specified filter \code{filterNoise}. This function is called internally by
+#' \code{\link{soundgen}}, but it may be more convenient to call it directly
+#' when synthesizing non-biological noises defined by specific spectral and
+#' amplitude envelopes rather than formants: the wind, whistles, impact noises,
+#' etc. See \code{\link{fart}} for a similarly simplified function for simple,
+#' non-biological voiced sounds.
 #'
-#' Generates white noise of length \code{len} and with spectrum defined by
-#' linear decay \code{rolloffNoise} above \code{flatSpectrum} and/or a specified
-#' filter \code{filterNoise}. Algorithm: paints a spectrum with desired
-#' characteristics, sets phase to zero, and generates a time sequence via
-#' inverse FFT. Noise can then be used as an additional source to be added to
-#' the glottal source AFTER the glottal source has been formant-filtered, or
-#' BEFORE formant-filtering for glottal breathing noise.
+#' Algorithm: paints a spectrum with desired characteristics, sets phase to
+#' zero, and generates a time sequence via inverse FFT. Noise can then be used
+#' as an additional source to be added to the glottal source AFTER the glottal
+#' source has been formant-filtered, or BEFORE formant-filtering for glottal
+#' breathing noise.
 #' @param len length of output
 #' @param noiseAnchors a dataframe specifying the amplitude envelope of
 #'   output. $time: timing of aspiration noise, ms c(start,finish) relative to
@@ -19,7 +24,7 @@
 #'   breathing = 500 - (-100) = 600 ms). noiseAnchors$value: the amount of
 #'   aspiration noise at the given time anchors (to be smoothed). throwaway =
 #'   no breathing, 0 = as strong as the voiced (harmonic) part
-#' @param flatSpectrum keep spectrum flat up to ... Hz (ie rolloffNoise applies
+#' @param noiseFlatSpec keep spectrum flat up to ... Hz (ie rolloffNoise applies
 #'   only above this frequency)
 #' @inheritParams soundgen
 #' @param windowLength_points the length of fft window, points
@@ -27,16 +32,28 @@
 #'   we can provide the exact filter - a vector of length windowLength_points/2
 #'   or, if we want moving formants, a matrix with windowLength_points/2 rows
 #'   and an arbitrary number of columns
-#' @keywords internal
+#' @keywords export
 #' @examples
-#' # 1 s of white noise
+#' # .5 s of white noise
 #' samplingRate = 16000
-#' noise = soundgen:::generateNoise(len = samplingRate,
-#'   rolloffNoise = 0, samplingRate = samplingRate)
+#' noise1 = generateNoise(len = samplingRate * .5,
+#'   samplingRate = samplingRate)
+#' # playme(noise1, samplingRate)
+#' # seewave::meanspec(noise1, f = samplingRate)
+#'
+#' # Percussion
+#' noise2 = generateNoise(len = samplingRate * .15, noiseAnchors = c(0, -120),
+#'   rolloffNoise = c(4, -6), attackLen = 5)
+#' noise3 = generateNoise(len = samplingRate * .25, noiseAnchors = c(0, -40),
+#'   rolloffNoise = c(4, -24), attackLen = 5)
+#' # playme(c(noise2, noise3), samplingRate)
+#'
+#' \dontrun{
+#' # 1.2 s of noise with rolloff changing from 0 to -12 dB above 2 kHz
+#' noise = generateNoise(len = samplingRate * 1.2,
+#'   rolloffNoise = c(0, -12), noiseFlatSpec = 2000, samplingRate = samplingRate)
 #' # playme(noise, samplingRate = samplingRate)
-#' # 1 s of noise with rolloff changing from 0 to -6 dB
-#' noise = soundgen:::generateNoise(len = samplingRate,
-#'   rolloffNoise = c(0, -6), samplingRate = samplingRate)
+#' # spectrogram(noise, samplingRate)
 #'
 #' # To create a sibilant [s], specify a single strong, broad formant at ~7 kHz:
 #' windowLength_points = 1024
@@ -44,48 +61,57 @@
 #'   nr = windowLength_points / 2, nc = 1, samplingRate = samplingRate,
 #'  formants = list('f1' = data.frame(time = 0, freq = 7000,
 #'                                    amp = 50, width = 2000)))
-#' noise = soundgen:::generateNoise(len = samplingRate, rolloffNoise = -4,
+#' noise = generateNoise(len = samplingRate,
 #'   samplingRate = samplingRate, filterNoise = filterNoise)
 #' # plot(filterNoise, type = 'l')
 #' # playme(noise, samplingRate = samplingRate)
 #'
-#' # low-frequency, wind-like noise
+#' # Low-frequency, wind-like noise
 #' filterNoise = soundgen:::getSpectralEnvelope(
 #'   nr = windowLength_points / 2, nc = 1, lipRad = 0,
 #'   samplingRate = samplingRate, formants = list('f1' = data.frame(
 #'     time = 0, freq = 150, amp = 30, width = 90)))
-#' noise = soundgen:::generateNoise(len = samplingRate, rolloffNoise = -12,
+#' noise = generateNoise(len = samplingRate,
 #'   samplingRate = samplingRate, filterNoise = filterNoise)
 #' # playme(noise, samplingRate = samplingRate)
+#'
+#' # Manual filter, e.g. for a kettle-like whistle (narrow-band noise)
+#' filterNoise = c(rep(0, 100), 120, rep(0, 100))  # any length is fine
+#' # plot(filterNoise, type = 'b')  # notch filter at Nyquist / 2, here 8 kHz
+#' noise = generateNoise(len = samplingRate,
+#'   samplingRate = samplingRate, filterNoise = filterNoise)
+#' # playme(noise, samplingRate = samplingRate)
+#' # spectrogram(noise, samplingRate)
+#' }
 generateNoise = function(len,
-                         noiseAnchors = data.frame(
-                           time = c(0, 300),
-                           value = c(0, 0)
-                         ),
-                         rolloffNoise = -4,
+                         noiseAnchors = NULL,
+                         rolloffNoise = 0,
                          attackLen = 10,
-                         flatSpectrum = 1200,
+                         noiseFlatSpec = 1200,
                          windowLength_points = 1024,
                          samplingRate = 16000,
                          overlap = 75,
                          throwaway = -80,
-                         filterNoise = NA) {
+                         filterNoise = NULL) {
   # convert anchors to a smooth contour of breathing amplitudes
-  breathingStrength = getSmoothContour(
-    len = len,
-    anchors = noiseAnchors,
-    normalizeTime = FALSE,
-    valueFloor = permittedValues['noiseAmpl', 'low'],
-    valueCeiling = permittedValues['noiseAmpl', 'high'],
-    samplingRate = samplingRate,
-    plot = FALSE
-  )
-  # plot(breathingStrength)
-
-  # convert anchor amplitudes from dB to linear multipliers
-  breathingStrength = 10 ^ (breathingStrength / 20)
-  if (sum(is.na(breathingStrength)) > 0) {
-    return(rep(0, len))
+  if (!is.null(noiseAnchors)) {
+    breathingStrength = getSmoothContour(
+      len = len,
+      anchors = noiseAnchors,
+      normalizeTime = FALSE,
+      valueFloor = permittedValues['noiseAmpl', 'low'],
+      valueCeiling = permittedValues['noiseAmpl', 'high'],
+      samplingRate = samplingRate,
+      plot = FALSE
+    )
+    # convert anchor amplitudes from dB to linear multipliers
+    breathingStrength = 10 ^ (breathingStrength / 20)
+    if (sum(is.na(breathingStrength)) > 0) {
+      return(rep(0, len))
+    }
+    # plot(breathingStrength)
+  } else {
+    breathingStrength = rep(1, len)
   }
 
   # set up spectral filter
@@ -95,75 +121,83 @@ generateNoise = function(len,
   # len + windowLength_points gives us two extra windows, since otherwise
   #   the sequence is a bit shorter than needed after i-fft
   nr = windowLength_points / 2
-  bin = samplingRate / 2 / nr
-  binsPerKHz = round(1000 / bin)
-  flatBins = round(flatSpectrum / bin)
   nc = length(step)
-  if (is.na(filterNoise[1])) {
-    filterNoise = matrix(1, nrow = nr, ncol = nc)
+  if (is.null(filterNoise)) {
+    # basic linear rolloff above noiseFlatSpec Hz
+    bin = samplingRate / 2 / nr
+    binsPerKHz = round(1000 / bin)
+    flatBins = round(noiseFlatSpec / bin)
+    idx = (flatBins + 1):nr  # the bins affected by rolloffNoise
+    if (length(rolloffNoise) > 1) {
+      rolloffNoise = getSmoothContour(anchors = rolloffNoise, len = nc)
+      filterNoise = matrix(1, nrow = nr, ncol = nc)
+      for (c in 1:nc) {
+        filterNoise[idx, c] = 10 ^ (rolloffNoise[c] / 20 * (idx - flatBins) / binsPerKHz)
+      }
+      # Johnson_2012_Acoustic-and-Auditory-Phonetics, Fig. 7.1: spectrum of turbulent noise
+    } else {
+      a = rep(1, nr)
+      a[idx] = 10 ^ (rolloffNoise / 20 * (idx - flatBins) / binsPerKHz)
+      filterNoise = matrix(rep(a, nc), ncol = nc)
+    }
+    # image(t(filterNoise))
   } else {
-    if (nrow(filterNoise) != nr | ncol(filterNoise) != nc) {
+    # user-specified exact spectral envelope
+    if (is.vector(filterNoise)) {
+      filterNoise = na.omit(filterNoise)
+      if (length(filterNoise) != nr) {
+        # interpolate to correct freq resolution
+        filterNoise = getSmoothContour(filterNoise, len = nr)
+        # filterNoise = approx(filterNoise, n = nr, method = 'linear')$y
+      }
+      filterNoise = matrix(rep(filterNoise, nc), ncol = nc)
+    }
+    if (ncol(filterNoise) != nc) {
       # message('Incorrect dimensions of filterNoise. Interpolating...')
-      filterRowIdx = round(seq(1, nrow(filterNoise), length.out = nr))
       filterColIdx = round(seq(1, ncol(filterNoise), length.out = nc))
-      filterNoise = filterNoise[filterRowIdx, filterColIdx]
+      filterNoise = filterNoise[, filterColIdx]
     }
   }
-  # modify the exact filter (if provided) by adding the specified
-  #   basic linear rolloff
-  idx = (flatBins + 1):nr  # the bins that will be modified
-  if (length(rolloffNoise) > 1) {
-    rolloffNoise = getSmoothContour(anchors = rolloffNoise,
-                                    len = nc)
-    mult = matrix(apply(
-      matrix(1:nc, ncol = 1),
-      1,
-      function(x) 10 ^ (rolloffNoise[x] / 20 * (idx - flatBins) / binsPerKHz)
-    ), nrow = length(idx), ncol = nc)
-    # Johnson_2012_Acoustic-and-Auditory-Phonetics, Fig. 7.1: spectrum of turbulent noise
-  } else {
-    a = 10 ^ (rolloffNoise / 20 * (idx - flatBins) / binsPerKHz)
-    mult = matrix(rep(a, nc),
-                  ncol = nc)
-  }
-  # image(t(mult))
-
-  filterNoise[idx, ] = filterNoise[idx, ] * mult
   # image(t(filterNoise))
   # plot(filterNoise[, 1], type = 'l')
   # plot(log10(filterNoise[, 1]) * 20, type = 'l')
 
-  ## instead of synthesizing the time series and then doing fft-ifft,
-  #   we can simply synthesize spectral noise, convert to complex
-  #   (setting imaginary=0), and then do inverse FFT just once
-  # set up spectrum with white noise
-  z1 = matrix(as.complex(runif(nr * nc)), nrow = nr, ncol = nc)
-  # multiply by filter
-  z1_filtered = z1 * filterNoise
-  # do inverse FFT
-  breathing = as.numeric(
-    seewave::istft(
-      z1_filtered,
-      f = samplingRate,
-      ovlp = overlap,
-      wl = windowLength_points,
-      output = "matrix"
+  if (sum(filterNoise) == 0) {
+    # zero filter - nothing to synthesize
+    warning('These settings will result in silence!')
+    breathing = rep(0, len)
+  } else {
+    ## instead of synthesizing the time series and then doing fft-ifft,
+    #   we can simply synthesize spectral noise, convert to complex
+    #   (setting imaginary=0), and then do inverse FFT just once
+    # set up spectrum with white noise
+    z1 = matrix(as.complex(runif(nr * nc)), nrow = nr, ncol = nc)
+    # multiply by filter
+    z1_filtered = z1 * filterNoise
+    # do inverse FFT
+    breathing = as.numeric(
+      seewave::istft(
+        z1_filtered,
+        f = samplingRate,
+        ovlp = overlap,
+        wl = windowLength_points,
+        output = "matrix"
+      )
     )
-  )
-  breathing = matchLengths(breathing, len = len)  # pad with 0s or trim
-  breathing = breathing / max(breathing) * breathingStrength # normalize
+    breathing = matchLengths(breathing, len = len)  # pad with 0s or trim
+    breathing = breathing / max(breathing) * breathingStrength # normalize
 
-  # add attack
-  if (is.numeric(attackLen) && any(attackLen > 0)) {
-    l = floor(attackLen * samplingRate / 1000)
-    if (length(l) == 1) l = c(l, l)
-    breathing = fade(
-      breathing,
-      fadeIn = l[1],
-      fadeOut = l[2]
-    )
+    # add attack
+    if (is.numeric(attackLen) && any(attackLen > 0)) {
+      l = floor(attackLen * samplingRate / 1000)
+      if (length(l) == 1) l = c(l, l)
+      breathing = fade(
+        breathing,
+        fadeIn = l[1],
+        fadeOut = l[2]
+      )
+    }
   }
-
   # plot(breathing, type = 'l')
   # playme(breathing, samplingRate = samplingRate)
   # spectrogram(breathing, samplingRate = samplingRate)
@@ -242,7 +276,7 @@ generateHarmonics = function(pitch,
     }
     if (length(vibratoDep) > 1) {
       vibratoDep = getSmoothContour(anchors = vibratoDep,
-                                     len = length(pitch))
+                                    len = length(pitch))
     }
     vibrato = 2 ^ (sin(2 * pi * (1:length(pitch)) * vibratoFreq /
                          pitchSamplingRate) * vibratoDep / 12)
