@@ -16,11 +16,12 @@ soundgen(repeatBout = 1, nSyl = 1, sylLen = 300, pauseLen = 200,
   formantDep = 1, formantDepStoch = 20, formantWidth = 1,
   vocalTract = NA, subFreq = 100, subDep = 100, shortestEpoch = 300,
   amDep = 0, amFreq = 30, amShape = 0, noiseAnchors = NULL,
-  formantsNoise = NA, rolloffNoise = -4, mouthAnchors = data.frame(time =
-  c(0, 1), value = c(0.5, 0.5)), amplAnchors = NA, amplAnchorsGlobal = NA,
-  interpol = c("approx", "spline", "loess")[3], discontThres = 0.05,
-  jumpThres = 0.01, samplingRate = 16000, windowLength = 50,
-  overlap = 75, addSilence = 100, pitchFloor = 1, pitchCeiling = 3500,
+  formantsNoise = NA, rolloffNoise = -4, noiseFlatSpec = 1200,
+  mouthAnchors = data.frame(time = c(0, 1), value = c(0.5, 0.5)),
+  amplAnchors = NA, amplAnchorsGlobal = NA, interpol = c("approx",
+  "spline", "loess")[3], discontThres = 0.05, jumpThres = 0.01,
+  samplingRate = 16000, windowLength = 50, overlap = 75,
+  addSilence = 100, pitchFloor = 1, pitchCeiling = 3500,
   pitchSamplingRate = 3500, throwaway = -80,
   invalidArgAction = c("adjust", "abort", "ignore")[1], plot = FALSE,
   play = FALSE, savePath = NA, ...)
@@ -184,6 +185,8 @@ component, approximating aspiration noise [h]}
 
 \item{rolloffNoise}{linear rolloff of the excitation source for the unvoiced
 component, dB/kHz (vectorized)}
+
+\item{noiseFlatSpec}{keeps noise spectrum flat to this frequency, Hz}
 
 \item{mouthAnchors}{a numeric vector of mouth opening (0 to 1, 0.5 = neutral,
 i.e. no modification) or a dataframe specifying the time (ms) and value of
